style: fix hero image and spacing

--- a/Styles.css
+++ b/Styles.css
@@ -8,6 +8,8 @@
 
 :root {
   /* Colors */
+  --white: #F6F7F8;
+  --light-grey: #ECEFF4;
 
   /* Spacing */
   --space-xs: 0.5rem;
@@ -16,17 +18,23 @@
   --space-lg: 2rem;
 }
 
-/* target #root after */
+html {
+  font-family: "Montserrat", sans-serif;
+}
 
+/* target #root after */
 body {
   min-height: 100vh;
   display: grid;
   padding: var(--space-md);
 
   grid-template-rows: 1fr 3fr auto;
+
+  background-color: var(--white);
 }
+
+/* Header */
 header {
-  background-color: rgb(230, 167, 167);
   display: grid;
   grid-template-rows: auto 1fr;
 }
@@ -36,8 +44,6 @@ nav {
   align-items: center;
   gap: var(--space-lg);
   padding: var(--space-sm);
-
-  background-color: aliceblue;
 }
 /* maybe remove icon and lets place a cart text */
 
@@ -52,30 +58,22 @@ nav {
   position: absolute;
 }
 
-.hero > h1,
-.hero > p {
+.hero-text-container {
   padding: var(--space-md);
   position: absolute;
   left: 50%;
+  top: 50%;
   transform: translate(-50%, -50%);
   z-index: 1;
-}
-.hero > h1 {
-  top: 50%;
-
-  color: white;
-}
-.hero > p {
-  top: 70%;
-
+  text-align: center;
   color: white;
 }
 
+/* Main */
 main {
   display: grid;
   grid-template-rows: repeat(2, 1fr);
 
-  background-color: #009688;
 }
 
 .best-sellers {
@@ -90,18 +88,20 @@ main {
 .product-grid {
   display: grid;
   grid-template-columns: repeat(4, 1fr);
+  gap: var(--space-sm);
 }
 .product-card {
   display: grid;
   grid-template-rows: 1fr auto auto;
-  justify-content: center
+  justify-content: center;
+  justify-items: center;
 }
-#product-image {
-  max-width: 250px;
+.product-card > img#product-image {
+  max-width: 100%;
 }
 .product-name,
 .product-price {
-  padding: var(--space-sm);
+  padding-top: var(--space-sm);
 }
 
 .company-description {
@@ -120,14 +120,19 @@ main {
   gap: var(--space-sm);
 }
 #company-description-image {
-  max-width: 250px;
+  max-width: 60%;
 }
 
+/* Footer */
 footer {
-    display: flex;
-    text-align: center;
-    padding: var(--space-sm);
-    justify-content: center;
+  display: flex;
+  text-align: center;
+  padding: var(--space-sm);
+  justify-content: center;
 
-    background-color: #a4a4bd;
+  background-color: var(--light-grey);
+}
+
+img {
+  border-radius: var(--space-md);
 }
